[package]
name = "authority"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["sync", "test-util", "rt-multi-thread"] }
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.38"
bincode = "1.3.3"
fastcrypto = "0.1.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bytes = "1.3.0"
async-trait = "0.1.60"
futures = "0.3.25"
eyre = "0.6.8"
clap = { version = "3.1.17", features = ["derive"] }
rocksdb = "0.19.0"
ark-ff = "0.3.0"
ark-bls12-377 = "0.3.0"
ark-bw6-761 = "0.3.0"
prometheus = "0.13.1"
axum = "0.6.15"
hyper = "0.14.26"

config = { path = "../config" }
messages = { path = "../messages" }
network = { path = "../network" }
arke_core = { path = "../crypto/arke_core" }

[dev-dependencies]
rand = "0.8.5"
test-util = { path = "../test-util" }