[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "time", "net"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
eyre = "0.6.8"
futures = "0.3.25"
rand = "0.8.5"
fastcrypto = "0.1.4"
bytes = "1.3.0"
bincode = "1.3.3"
statistical = "1.0.0"
ark-bls12-377 = "0.3.0"
ark-bw6-761 = "0.3.0"
ark-ff = "0.3.0"
prometheus = "0.13.1"
axum = "0.6.15"
hyper = "0.14.26"

config = { path = "../config" }
messages = { path = "../messages" }
network = { path = "../network" }
arke_core = { path = "../crypto/arke_core" }

[[bin]]         
name = "benchmark_client"   
path = "src/benchmark_client.rs" 

[[bin]]         
name = "micro_benchmarks"   
path = "src/micro_benchmarks.rs" 

